VM crashes with "assert(_adapter != NULL) failed: must have" at methodOop.cpp:63

XMLWordPrintable

    • b15
    • generic
    • generic

        VM could crash with:
        ;; Using jvm: "/export/local/common/jdk/baseline/solaris-i586/jre/lib/i386/client/libjvm.so"
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/tmp/jprt/P1/B/091209.jcoomes/source/src/share/vm/oops/methodOop.cpp:63), pid=11648, tid=47
        # assert(_adapter != NULL) failed: must have
        #
        # JRE version: 7.0-b144
        # Java VM: Java HotSpot(TM) Client VM (21.0-b15-internal-201105280912.jcoomes.hs21-b15-snapshot-fastdebug compiled mode, sharing solaris-x86 )
        # Core dump written. Default location: /export/local/51227.HSX.PIT.VM+solaris-i586_vm__client_comp_nsk.stress.testlist/results/ResultDir/jck12a004/core or core.11648
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #

              Assignee:
              Coleen Phillimore
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: