7049928: VM crashes with "assert(_adapter != NULL) failed: must have" at methodOop.cpp:63

Removed extra change from another bug fix that caused this regression

Reviewed-by: phh, dcubed, kvn, kamg, never